fixed navbar functionality not closing after clicking on mobile

--- a/src/styles/layout/_Nav.scss
+++ b/src/styles/layout/_Nav.scss
@@ -15,6 +15,8 @@
     font-family: "AhganiryaFont";
     font-size: 1.1rem;
     letter-spacing: 0.1rem;
+    transition: z-index 0.3s ease-in-out;
+    z-index: 100;
 
     svg {
       margin-right: 5px;
